# BeauTyXT

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE.material-symbols.txt  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: gradle-dependency-submission.yml
app/: .gitignore  build.gradle.kts  lint.xml  proguard-rules.pro
app/release/: signing-command.txt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/dev/soupslurpr/beautyxt/: IFileViewModelRustLibraryAidlInterface.aidl  ITypstProjectViewModelRustLibraryAidlInterface.aidl  PathAndPfd.aidl
app/src/main/aidl/oldtyxt/dev/soupslurpr/beautyxt/: IFileViewModelRustLibraryAidlInterface.aidl  ITypstProjectViewModelRustLibraryAidlInterface.aidl  PathAndPfd.aidl
app/src/main/assets/: beautyxt_rs-third-party-licenses.html  beautyxt_rs_plain_text_and_markdown-third-party-licenses.html  beautyxt_rs_typst-third-party-licenses.html
app/src/main/kotlin/: MainActivity.kt
app/src/main/kotlin/dev/soupslurpr/beautyxt/: BeauTyXT.kt  MainActivity.kt  PathAndPfd.kt  Utils.kt  beautyxt_rs.kt
app/src/main/kotlin/dev/soupslurpr/beautyxt/beautyxt_rs_plain_text_and_markdown_bindings/: beautyxt_rs_plain_text_and_markdown.kt
app/src/main/kotlin/dev/soupslurpr/beautyxt/beautyxt_rs_typst_bindings/: beautyxt_rs_typst.kt
app/src/main/kotlin/dev/soupslurpr/beautyxt/bindings/: beautyxt_rs_plain_text_and_markdown.kt  beautyxt_rs_typst.kt
app/src/main/kotlin/dev/soupslurpr/beautyxt/constants/: MimeTypes.kt
app/src/main/kotlin/dev/soupslurpr/beautyxt/data/: DataSource.kt  FileUiState.kt  SettingsUiState.kt  TypstProjectUiState.kt
app/src/main/kotlin/dev/soupslurpr/beautyxt/settings/: PreferencesUiState.kt  PreferencesViewModel.kt  SettingsUiState.kt  SettingsViewModel.kt
app/src/main/kotlin/dev/soupslurpr/beautyxt/ui/: CreditsScreen.kt  DonationScreen.kt  FileEditScreen.kt  FileViewModel.kt  FileViewModelRustLibraryIsolatedService.kt  LicenseScreen.kt  PlainTextAndMarkdownRustLibraryCreditsScreen.kt  PrivacyPolicyScreen.kt  ReviewPrivacyPolicyAndLicense.kt  RustLibraryCreditsScreen.kt  SettingsScreen.kt  StartupScreen.kt  TypstProjectScreen.kt  TypstProjectViewModel.kt  TypstProjectViewModelRustLibraryIsolatedService.kt  TypstRustLibraryCreditsScreen.kt
app/src/main/kotlin/dev/soupslurpr/beautyxt/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/kotlin/newtyxt/dev/soupslurpr/beautyxt/: Application.kt  BeautyxtApp.kt  MainActivity.kt
app/src/main/kotlin/newtyxt/dev/soupslurpr/beautyxt/data/: DocumentUriContentDataSource.kt  DocumentUriContentRepository.kt
app/src/main/kotlin/newtyxt/dev/soupslurpr/beautyxt/ui/: EditorScreen.kt  HomeScreen.kt
app/src/main/kotlin/newtyxt/dev/soupslurpr/beautyxt/ui/common/: ScreenLazyColumn.kt
app/src/main/kotlin/newtyxt/dev/soupslurpr/beautyxt/ui/theme/: DefaultTheme.kt  Theme.kt
app/src/main/kotlin/oldtyxt/dev/soupslurpr/beautyxt/: BeauTyXT.kt  MainActivity.kt  PathAndPfd.kt  Utils.kt
app/src/main/kotlin/oldtyxt/dev/soupslurpr/beautyxt/constants/: MimeTypes.kt
app/src/main/kotlin/oldtyxt/dev/soupslurpr/beautyxt/data/: FileUiState.kt  TypstProjectUiState.kt
app/src/main/kotlin/oldtyxt/dev/soupslurpr/beautyxt/settings/: PreferencesUiState.kt  PreferencesViewModel.kt
app/src/main/kotlin/oldtyxt/dev/soupslurpr/beautyxt/ui/: CreditsScreen.kt  DonationScreen.kt  FileEditScreen.kt  FileViewModel.kt  FileViewModelRustLibraryIsolatedService.kt  LicenseScreen.kt  PlainTextAndMarkdownRustLibraryCreditsScreen.kt  PrivacyPolicyScreen.kt  ReviewPrivacyPolicyAndLicense.kt  SettingsScreen.kt  StartupScreen.kt  TypstProjectScreen.kt  TypstProjectViewModel.kt  TypstProjectViewModelRustLibraryIsolatedService.kt  TypstRustLibraryCreditsScreen.kt
app/src/main/kotlin/oldtyxt/dev/soupslurpr/beautyxt/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/kotlin/oldtyxt/uniffi/beautyxt_rs_plain_text_and_markdown_bindings/: beautyxt_rs_plain_text_and_markdown.kt
app/src/main/kotlin/oldtyxt/uniffi/beautyxt_rs_typst_bindings/: beautyxt_rs_typst.kt
app/src/main/kotlin/uniffi/beautyxt_rs_plain_text_and_markdown/: beautyxt_rs_plain_text_and_markdown.kt
app/src/main/kotlin/uniffi/beautyxt_rs_typst/: beautyxt_rs_typst.kt
app/src/main/proto/: Settings.proto
app/src/main/res/drawable/: baseline_export_notes_24.xml  baseline_print_24.xml  baseline_save_as_24.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml
app/src/main/res/values/: ic_launcher_background.xml  oldtyxt_strings.xml  strings.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-night/: themes.xml
beautyxt_rs/: Cargo.toml  about.hbs  about.toml  rust-toolchain.toml  uniffi.toml  useful-commands.txt
beautyxt_rs/.cargo/: config.toml
beautyxt_rs/src/: lib.rs  markdown.rs  plain_text.rs  typst.rs
beautyxt_rs_plain_text_and_markdown/: Cargo.toml  LICENSE.txt  about.hbs  about.toml  rust-toolchain.toml  uniffi.toml  useful-commands.txt
beautyxt_rs_plain_text_and_markdown/.cargo/: config.toml
beautyxt_rs_plain_text_and_markdown/src/: lib.rs  markdown.rs  plain_text.rs
beautyxt_rs_typst/: .gitignore  Cargo.toml  LICENSE.txt  about.hbs  about.toml  rust-toolchain.toml  uniffi.toml  useful-commands.txt
beautyxt_rs_typst/.cargo/: config.toml
beautyxt_rs_typst/Noto_Serif/: OFL.txt
beautyxt_rs_typst/src/: lib.rs  typst.rs
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
