[package]
name = "beautyxt_rs"
version = "0.1.0"
edition = "2021"
license-file = "./LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
comemo = "0.3.0"
docx-rs = "0.4.7"
ego-tree = "0.6.2"
libc = "0.2.149"
markdown = "1.0.0-alpha.14"
once_cell = "1.18.0"
scraper = "0.17.1"
thiserror = "1.0.50"
typst = { git = "https://github.com/typst/typst", version = "0.9.0", rev = "7bb4f6df44086b4c1120b227f7ae963e6c2ad5ab" }
typst-library = { git = "https://github.com/typst/typst", version = "0.9.0", rev = "7bb4f6df44086b4c1120b227f7ae963e6c2ad5ab" }
uniffi = "0.25.0"

[build-dependencies]
uniffi = { version = "0.25.0", features = ["build"] }

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[profile.release-dev]
inherits = "release"
strip = false
lto = false
codegen-units = 16

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
