[package]
name = "beautyxt_rs"
version = "0.1.0"
edition = "2021"
license-file = "./LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
comemo = "0.3.1"
docx-rs = "0.4.7"
ego-tree = "0.6.2"
libc = "0.2.151"
markdown = "1.0.0-alpha.16"
once_cell = "1.19.0"
scraper = "0.18.1"
thiserror = "1.0.50"
typst = { git = "https://github.com/typst/typst", version = "0.10.0", rev = "70ca0d257bb4ba927f63260e20443f244e0bb58c" }
typst-pdf = { git = "https://github.com/typst/typst", version = "0.10.0", rev = "70ca0d257bb4ba927f63260e20443f244e0bb58c" }
typst-svg = { git = "https://github.com/typst/typst", version = "0.10.0", rev = "70ca0d257bb4ba927f63260e20443f244e0bb58c" }
typst-render = { git = "https://github.com/typst/typst", version = "0.10.0", rev = "70ca0d257bb4ba927f63260e20443f244e0bb58c" }
uniffi = "0.25.3"

[build-dependencies]
uniffi = { version = "0.25.2", features = ["build"] }

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
