[package]
name = "beautyxt_rs_plain_text_and_markdown"
version = "0.1.0"
edition = "2021"
license-file = "./LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docx-rs = "0.4.7"
ego-tree = "0.6.2"
libc = "0.2.152"
markdown = "1.0.0-alpha.16"
scraper = "0.18.1"
uniffi = "0.26.1"

[target.'cfg(unix)'.dependencies]
seccompiler = "0.4.0"

[build-dependencies]
uniffi = "0.26.1"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
