[package]
name = "beautyxt_rs_plain_text_and_markdown"
version = "0.1.0"
edition = "2021"
license-file = "./LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docx-rs = "0"
ego-tree = "0"
libc = "0"
markdown = "1.0.0-alpha.17"
scraper = "0"
uniffi = "0"

[build-dependencies]
uniffi = "0"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
