[package]
name = "beautyxt_rs_typst"
version = "0.1.0"
edition = "2021"
license-file = "./LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0"
comemo = "0"
libc = "0"
once_cell = "1"
thiserror = "1"
typst = { git = "https://github.com/typst/typst", version = "0.11.0", rev = "2bf9f95dd83f2ceef1e32ae1847a162c7d193f76" }
typst-pdf = { git = "https://github.com/typst/typst", version = "0.11.0", rev = "2bf9f95dd83f2ceef1e32ae1847a162c7d193f76" }
typst-svg = { git = "https://github.com/typst/typst", version = "0.11.0", rev = "2bf9f95dd83f2ceef1e32ae1847a162c7d193f76" }
typst-render = { git = "https://github.com/typst/typst", version = "0.11.0", rev = "2bf9f95dd83f2ceef1e32ae1847a162c7d193f76" }
uniffi = "0"

[build-dependencies]
uniffi = "0"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
