[package]
name = "beautyxt_rs_typst"
version = "0.1.0"
edition = "2021"
license-file = "./LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0"
comemo = "0"
libc = "0"
once_cell = "1"
thiserror = "1"
typst = { git = "https://github.com/typst/typst", version = "0.11.1", rev = "5011510270c2c23f0ab019af486b26db0d62261b" }
typst-pdf = { git = "https://github.com/typst/typst", version = "0.11.1", rev = "5011510270c2c23f0ab019af486b26db0d62261b" }
typst-svg = { git = "https://github.com/typst/typst", version = "0.11.1", rev = "5011510270c2c23f0ab019af486b26db0d62261b" }
typst-render = { git = "https://github.com/typst/typst", version = "0.11.1", rev = "5011510270c2c23f0ab019af486b26db0d62261b" }
uniffi = "0"

[build-dependencies]
uniffi = { version = "0", features = ["build"] }

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
